syntax = "proto2";

message player_login_request {
	required string account_name = 1;
	required uint32 server_id = 2;
}